--- a/app/styles.css
+++ b/app/styles.css
@@ -1,10 +1,18 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+
+}
+
 .container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
-    gap: 10px;
-    justify-content: center;
+    margin: auto;
+    max-width: calc(560px + 560px + 10px + 10px);
+    column-gap: 10px;
 }
 
 .card {
@@ -14,6 +22,11 @@
     border-radius: 16px;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    margin-bottom: 10px;
+}
+
+.card:last-of-type {
+    margin-bottom: 0;
 }
 
 .card > p {
@@ -22,17 +35,35 @@
 }
 
 .picture {
-    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    aspect-ratio: 16 / 9;
+    height: 100%;
+    border: none;
+}
+
+.aspect-16-9 {
+    padding: 56.25% 0 0 0;
+    position: relative;
+}
+
+.vimeo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 
 .youtube {
-    border: none;
-
-    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    aspect-ratio: 16 / 9;
+    height: 100%;
+    border: none;
 }
 
 .date {
