try fix border radius, add some text

--- a/app/styles.css
+++ b/app/styles.css
@@ -18,6 +18,7 @@ body {
 .card {
     position: relative;
     max-width: 560px;
+    max-height: 460px;
     background: lightgray;
     border-radius: 16px;
     overflow: hidden;
@@ -25,9 +26,6 @@ body {
     margin-bottom: 10px;
 }
 
-.card:last-of-type {
-    margin-bottom: 0;
-}
 
 .card > p {
     padding-left: 16px;
@@ -46,10 +44,12 @@ body {
 .aspect-16-9 {
     padding: 56.25% 0 0 0;
     position: relative;
+
 }
 
 .vimeo {
     position: absolute;
+    border-radius: 16px;
     top: 0;
     left: 0;
     width: 100%;
