--- a/app/styles.css
+++ b/app/styles.css
@@ -1,13 +1,9 @@
 body {
-    display: flex;
     font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
-    justify-content: flex-start;
-
     background-color: #f0f0f0;
     min-height: 100vh;
     min-width: 320px;
     width: 100%;
-    height: 100%;
     margin: 0;
 }
 
@@ -28,13 +24,25 @@ body {
     margin: 8px 0px;
 }
 
-@media (min-width: 576px) {
-    /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+@media (min-width: 592px) {
     .container {
         padding: 8px;
     }
+
+    .container {
+        width: 592px;
+        margin: 0 auto;
+    }
     .card {
         margin: 8px;
+    }
+}
+
+
+@media (min-width: 1168px) {
+    .container {
+        width: 1168px;
+        margin: 0 auto;
     }
 }
 
@@ -45,6 +53,17 @@ body {
 }
 
 .picture {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    object-fit: cover;
+    object-position: center;
+}
+
+.gif {
     position: absolute;
     top: 0;
     left: 0;
