--- a/app/styles.css
+++ b/app/styles.css
@@ -19,8 +19,8 @@ body {
 
 .mode.active {
     background-color: #fff;
-    box-shadow: 0 1px 2px 0 rgba(0,0,0,.03), 0 1px 6px -1px rgba(0,0,0,.02), 0 2px 4px 0 rgba(0,0,0,.02);
-    color: rgba(0,0,0,.88);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .03), 0 1px 6px -1px rgba(0, 0, 0, .02), 0 2px 4px 0 rgba(0, 0, 0, .02);
+    color: rgba(0, 0, 0, .88);
 }
 
 .container {
@@ -65,6 +65,7 @@ body {
         width: 592px;
         margin: 0 auto;
     }
+
     .card {
         margin: 8px;
     }
@@ -187,8 +188,17 @@ body {
 }
 
 .map {
-    width: calc(100% - 16px - 16px);
-    min-height: 360px;
-    background-color: red;
+    flex-grow: 1;
+    width: 100%;
+    min-height: 100vw;
     margin: 8px;
+    background-color: red;
+}
+
+
+@media (min-width: 592px) {
+    .map {
+        min-height: 360px;
+        width: calc(100% - 16px - 16px);
+    }
 }
