--- a/app/styles.css
+++ b/app/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
     background-color: #141414;
     min-height: 100vh;
     min-width: 320px;
