--- a/app/styles.css
+++ b/app/styles.css
@@ -149,6 +149,17 @@ body {
     overflow: hidden;
 }
 
+.rutube {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 16px;
+    overflow: hidden;
+}
+
 .header {
     display: flex;
     margin-bottom: 16px;
