--- a/app/styles.css
+++ b/app/styles.css
@@ -93,7 +93,7 @@ body {
     color: rgba(249, 246, 240, 0.60);
     font-size: 16px;
     font-weight: 600;
-    word-wrap: break-word
+    word-wrap: break-word;
 }
 
 .picture {
@@ -107,6 +107,17 @@ body {
     object-position: center;
     border-radius: 16px;
     overflow: hidden;
+}
+
+.github {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    object-fit: contain;
+    object-position: center;
 }
 
 .gif {
@@ -125,6 +136,14 @@ body {
 .aspect-16-9 {
     padding: 56.25% 0 0 0;
     position: relative;
+}
+
+.aspect-16-9-github {
+    padding: 56.25% 0 0 0;
+    position: relative;
+    background: white;
+    border-radius: 16px;
+    overflow: hidden;
 }
 
 .vimeo {
@@ -179,6 +198,10 @@ body {
 
 .tags {
     font-size: .8125rem;
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+    gap: 32px;
 }
 
 .tag {
@@ -191,12 +214,20 @@ body {
     color: #F9F6F0;
     font-size: 16px;
     font-weight: 700;
-    margin-right: 32px;
+    font-family: sans-serif;
+}
+
+.spacer {
+    flex-grow: 1;
 }
 
 
 .tag:before {
     content: '→ ';
+}
+
+.tag-github:before {
+    content: '↗ '
 }
 
 .tag:last-of-type:after {
